--- a/index.html
+++ b/index.html
@@ -47,17 +47,32 @@
             <p>JAVASCRIPT</p>
         </div>
     </section>
-        <div id="kkk">   <h2>PROJETOS</h2></div>
+        <div id="kkk">   
+            <h2>PROJETOS</h2>
+                <div id="container">
+                    <p> Clique e Acesse!</p>
+                </div>
+        </div>
     <section class="bloco03">
 
         <div class="proj">
-            <img src="img/caff.png" alt="foto do site da caff" class="imgs">
+            <a href="https://juliaamarall.github.io/caff/" target="_blank"><img src="img/caff.png" alt="foto do site da caff" class="imgs"></a>
             <p> HTML CSS</p>
         </div>
 
         <div  class="proj">
-            <img src="img/evoco (1).png" alt="foto do site evoco" class="imgs">
+            <a href="https://juliaamarall.github.io/Evocoo/" target="_blank"><img src="img/evoco (1).png" alt="foto do site evoco" class="imgs"></a>
             <p> HTML CSS</p>
+        </div>
+
+        <div  class="proj">
+            <img src="img/proj.png" alt="foto do site do projeto social" class="imgs">
+            <p> HTML CSS</p>
+        </div>
+
+        <div  class="proj">
+            <img src="img/sys (1).png" alt="foto do site syscad" class="imgs">
+            <p> HTML  CSS  JAVASCRIPT</p>
         </div>
     </section>
    </main>
