--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1> Mrjulia</h1>
     <div>
         <a href="https://github.com/juliaamarall" target="_blank"> <img src="img/github.png" alt=" logo do github" class="logos"></a>
-        <a href="#" target="_blank"> <img src="img/linkedin.png" alt=" logo do linkedin" class="logos"></a>
+        <a href="https://www.linkedin.com/in/julia-amaral-5b44a0243?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BSiVvWJzyT%2BOlR9WTB9NcVg%3D%3D" target="_blank"> <img src="img/linkedin.png" alt=" logo do linkedin" class="logos"></a>
     </div>
    </header> 
    <main>
