--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             <img src="img/sys (1).png" alt="foto do site syscad" class="imgs">
             <p> HTML  CSS  JAVASCRIPT</p>
         </div>
+
+        <div  class="proj">
+            <img src="img/gab nobre.png" alt="foto do site syscad" class="imgs">
+            <p> HTML  CSS  JAVASCRIPT</p>
+        </div>
     </section>
    </main>
 
