atualização de educação complementar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="kkk">   
             <h2>PROJETOS</h2>
                 <div id="container">
-                    <p> Clique e Acesse!</p>
+                    <p> Educação complementar</p>
                 </div>
         </div>
     <section class="bloco03">
