--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div id="kkk">   
             <h2>PROJETOS</h2>
                 <div id="container">
-                    <p> Educação complementar</p>
+                    <a href="index02.html">
+                        <p> Educação complementar</p>
+                    </a>
                 </div>
         </div>
     <section class="bloco03">
