--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>PROJETOS</h2>
                 <div id="container">
                     <a href="index02.html">
-                        <p> Educação complementar</p>
+                        <p>Certificações</p>
                     </a>
                 </div>
         </div>
