adicionando mais uma tecnologia!!!

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         <div>
             <p>JAVASCRIPT</p>
         </div>
+
+        <div>
+            <p>BOOTSTRAP</p>
+        </div>
     </section>
         <div id="kkk">   
             <h2>PROJETOS</h2>
