adicionando mais projetos e atualizações das skills

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <div>
             <p>BOOTSTRAP</p>
         </div>
+
+        <div>
+            <p>GIT E GITHUB</p>
+        </div>
     </section>
         <div id="kkk">   
             <h2>PROJETOS</h2>
@@ -84,6 +88,11 @@
         <div  class="proj">
             <img src="img/gab nobre.png" alt="foto do site syscad" class="imgs">
             <p> HTML  CSS  JAVASCRIPT</p>
+        </div>
+
+        <div  class="proj">
+            <img src="img/Captura de Tela (2).png" alt="foto do site syscad" class="imgs">
+            <p> BOOTSTRAP</p>
         </div>
     </section>
    </main>
